<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>2.6.1</version>
  </parent>

  <groupId>com.tek</groupId>
  <artifactId>tek-framework-parent</artifactId>
  <version>${revision}</version>
  <packaging>pom</packaging>

  <scm>
    <url>https://github.com/marcopag90/tek-framework</url>
  </scm>

  <developers>
    <developer>
      <name>Marco Pagan</name>
      <email>marcopag90@gmail.com</email>
    </developer>
  </developers>

  <distributionManagement>
    <repository>
      <id>repoWriteUrl</id>
      <url>${repoWriteUrl}</url>
    </repository>
    <snapshotRepository>
      <id>repoWriteUrl</id>
      <url>${repoWriteUrl}</url>
    </snapshotRepository>
  </distributionManagement>

  <properties>
    <java.version>17</java.version>
    <revision>3.0.2</revision>
    <!-- Dependencies versioning -->
    <springfox-boot-starter.version>3.0.0</springfox-boot-starter.version>
    <springfox-legacy.version>2.9.2</springfox-legacy.version>
    <spring-filter.version>2.0.5</spring-filter.version>
    <hibernate-types-52.version>2.12.1</hibernate-types-52.version>
    <commons-io.version>2.11.0</commons-io.version>
    <commons-beanutils.version>1.9.4</commons-beanutils.version>
    <javafaker.version>1.0.2</javafaker.version>
    <guava.version>31.0.1-jre</guava.version>
    <!-- Plugin versioning -->
    <flatten-maven-plugin.version>1.2.7</flatten-maven-plugin.version>
  </properties>

  <modules>
    <module>tek-shared</module>
    <module>tek-core</module>
    <module>tek-rest-shared</module>
    <module>tek-rest-jpa</module>
    <!--    <module>tek-rest-mongo</module>-->
  </modules>

  <dependencies>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <optional>true</optional>
    </dependency>
  </dependencies>

  <!-- Optional dependencies inherited by child modules: must be declared inside child.pom.xml-->
  <dependencyManagement>
    <dependencies>
      <!--
      Swagger Spring Boot dependencies
      /*
      FIXME
        https://github.com/springfox/springfox/issues/3435
        currently not used because of springfox form parameters regression
        from springfox 2.9.2 to springfox 3.0.0
      */
      -->
      <dependency>
        <groupId>io.springfox</groupId>
        <artifactId>springfox-boot-starter</artifactId>
        <version>${springfox-boot-starter.version}</version>
      </dependency>
      <!-- Swagger Legacy dependencies-->
      <dependency>
        <groupId>io.springfox</groupId>
        <artifactId>springfox-swagger2</artifactId>
        <version>${springfox-legacy.version}</version>
      </dependency>
      <dependency>
        <groupId>io.springfox</groupId>
        <artifactId>springfox-swagger-ui</artifactId>
        <version>${springfox-legacy.version}</version>
      </dependency>
      <dependency>
        <groupId>io.springfox</groupId>
        <artifactId>springfox-spring-web</artifactId>
        <version>${springfox-legacy.version}</version>
      </dependency>
      <!--REST Sql Query Language https://github.com/turkraft/spring-filter-->
      <dependency>
        <groupId>com.turkraft</groupId>
        <artifactId>spring-filter</artifactId>
        <version>${spring-filter.version}</version>
      </dependency>
      <!-- Hibernate Datatype extensions -->
      <dependency>
        <groupId>com.vladmihalcea</groupId>
        <artifactId>hibernate-types-52</artifactId>
        <version>${hibernate-types-52.version}</version>
      </dependency>
      <!-- Hibernate Serializer for lazy objects -->
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>${jackson-bom.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.datatype</groupId>
        <artifactId>jackson-datatype-hibernate5</artifactId>
        <version>${jackson-bom.version}</version>
      </dependency>
      <!-- Google Guava Object Serializers -->
      <dependency>
        <groupId>com.fasterxml.jackson.datatype</groupId>
        <artifactId>jackson-datatype-guava</artifactId>
        <version>${jackson-bom.version}</version>
      </dependency>
      <!-- Utilities -->
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>${commons-io.version}</version>
      </dependency>
      <dependency>
        <groupId>commons-beanutils</groupId>
        <artifactId>commons-beanutils</artifactId>
        <version>${commons-beanutils.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>${guava.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>pl.project13.maven</groupId>
        <artifactId>git-commit-id-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>flatten-maven-plugin</artifactId>
        <version>${flatten-maven-plugin.version}</version>
        <configuration>
          <pomElements>
            <developers/>
            <scm/>
          </pomElements>
        </configuration>
        <executions>
          <execution>
            <id>flatten</id>
            <phase>process-resources</phase>
            <goals>
              <goal>flatten</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
    <!-- Optional plugin inherited by child modules: need to be declared inside child.pom.xml-->
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.hibernate.orm.tooling</groupId>
          <artifactId>hibernate-enhance-maven-plugin</artifactId>
          <version>${hibernate.version}</version>
          <executions>
            <execution>
              <configuration>
                <!-- see https://dzone.com/articles/hibernate-bytecode-enhancement-dirty-tracking -->
                <enableDirtyTracking>true</enableDirtyTracking>
                <!--
                The enableLazyInitialization can be useful for lazy attributes,
                like fetching a parent-side @OneToOne association lazily, as by default,
                this one is fetched eagerly even when set to FetchType.LAZY.
                -->
                <enableLazyInitialization>true</enableLazyInitialization>
                <!-- see https://dzone.com/articles/hibernate-bytecode-enhancement-association-managem -->
                <enableAssociationManagement>true</enableAssociationManagement>
                <failOnError>true</failOnError>
              </configuration>
              <goals>
                <goal>enhance</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
